# portfolio

./: .gitignore  .gitmodules  .travis.yml  404.html  BingSiteAuth.xml  CNAME  Makefile  _headers  about-me.html  apache-vhost.conf  build.sh  conf.py  contact.rst  crawler.py  cv.inc  cv.rst  documents.py  events.py  index.html  index.html.de  index.html.en  index.rst  invalidateCloudflareCache.sh  license.txt  netlify.toml  pelicanconf.py  projects.rst  publications.inc  publications.py  publications.rst  publishconf.py  pyproject.toml  readme  readme.md  redirects  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: main.yml
_static/css/: style.css
_static/js/: lang.js
_templates/: code.html  layout.html  manualtoc.html  select_language.html  social.html
author/: surt91.html
category/: misc.html
content/: aboutme.rst
content/de/: aboutme.rst
content/en/: aboutme.rst
content/extra/: _headers  cname  legacy_redirect.html  manifest.json  sitemap.xml
de/: 404.html  about-me.html  index.html
de/author/: surt91.html
de/category/: de.html
de/feeds/: all.atom.xml  de.atom.xml
en/: index.html
feeds/: all.atom.xml  misc.atom.xml
locale/de/LC_MESSAGES/: index.po  projects.po
theme/: sass.css
theme/css/: main.css
theme/js/: main.js
