[tool.poetry]
name = "portfolio"
version = "1.0.0"
description = ""
authors = ["Hendrik Schawe <surt91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.7.2"
webassets = "^2.0"
libsass = "^0.21.0"
cssmin = "^0.2.0"
jsmin = "^3.0.1"
pycountry = "^22.3.5"
typogrify = "^2.0.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
